--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.4",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
